# cliff

./: .dockerignore  .gitignore  .scanner-versions  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KNOWN_ISSUES.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-LICENSES.md  opencode.json
backend/: pyproject.toml
backend/cliff/: __init__.py  config.py  main.py
backend/cliff/agents/: __init__.py  errors.py  executor.py  output_parser.py  pipeline.py  registry.py  schemas.py  sidebar_mapper.py  template_engine.py  triage_codemap.py  triage_runner.py
backend/cliff/ai/: autodetect.py  catalog.py  legacy_migration.py  models.py  openrouter_oauth.py  repo.py  service.py  validators.py
backend/cliff/api/: _background.py  _engine_dep.py
backend/cliff/assessment/: __init__.py  _fs.py  clone.py  engine.py  scope.py  to_findings.py
backend/cliff/db/: connection.py  repo_agent_run.py  repo_finding.py  repo_ingest_job.py  repo_integration.py  repo_message.py  repo_setting.py  repo_sidebar.py  repo_workspace.py
backend/cliff/engine/: client.py  config_manager.py  models.py  pool.py  process.py
backend/cliff/evals/: __init__.py  adapter.py  cases.py  corpus.py  deep_dive_evaluators.py  evaluators.py  models.py  pricing.py  registry.py  repo_fetch.py  runners.py
backend/cliff/integrations/: __init__.py  audit.py  connection_tester.py  gateway.py  health.py  ingest_worker.py  normalizer.py  vault.py
backend/cliff/models/: __init__.py  finding.py  (+4 more)
backend/opensec/: config.py  main.py
backend/tests/: conftest.py  test_agent_template_engine.py  test_ai_autodetect.py  test_ai_catalog.py  test_ai_legacy_migration.py  test_ai_models.py  test_ai_openrouter_oauth.py  test_ai_phase_f_wiring.py  test_ai_repo.py  test_ai_service.py  test_ai_validators.py  test_audit.py  test_config.py  test_config_manager.py  test_connection_tester.py  test_context_builder.py  test_db.py  test_demo_seed.py  test_docker.py  test_engine_client.py  test_engine_process.py  test_evals_models.py  test_evals_pricing.py  test_evidence_guard.py  test_executor.py  test_first_run.py  test_gateway.py  test_github_app_client.py  test_github_app_flow.py  test_github_app_installation_discovery.py  test_github_app_repo.py  test_github_app_routes.py  test_github_app_token_refresh.py  test_github_token_lookup.py  test_ingest_job.py  test_integration_health.py  test_issue_derivation.py  test_main_lifespan.py  test_mcp_gateway_integration.py  test_migration_009.py  (+43 more)
cli/: pyproject.toml
cli/cliff_cli/: __init__.py  __main__.py  cli.py  client.py  daemon.py  output.py  process_sweep.py  updater.py
cli/opensec_cli/: cli.py  daemon.py  process_sweep.py  updater.py
cli/tests/: test_cli.py  test_daemon.py  test_process_sweep.py  test_updater.py
(+633 files in other folders)
