[project]
name = "cliff"
version = "0.2.1"
description = "Cliff - Self-hosted cybersecurity remediation copilot"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "urllib3>=2.5.0",
    "sse-starlette>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.6",
    "cryptography>=48.0.1",
    "keyring>=25.7.0",
    "pydantic-ai>=1.98,<1.99",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.9.0",
    "testcontainers>=4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"cliff/api/routes/*.py" = ["B008", "TC001", "TC003"]  # FastAPI Depends() in default args; Pydantic models need types at runtime
"cliff/models/*.py" = ["TC001", "TC003"]  # Pydantic models need types at runtime
"cliff/agents/runtime/tools/*.py" = ["TC001", "TC002"]  # Pydantic AI introspects tool RunContext/deps hints at runtime
"cliff/integrations/normalizer.py" = ["E501"]  # Long example strings inside the LLM prompt literal

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring an LLM API key",
    "agent: agent integration tests requiring real LLM calls (slow, costs money)",
    "docker: install smoke tests that boot the published Docker image (require docker daemon)",
    "integration: cross-cutting integration tests against an in-memory DB (no external deps, run by default)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cliff"]
